# SIMDVoxelizer

./: .gitignore  .gitsubprojects  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  Makefile  Octree.cpp  Octree.h  README.md  SIMDSparseVoxelizer.ispc  SIMDVoxelizer  SIMDVoxelizer.cpp  SIMDVoxelizer.ispc  common.mk
CMake/: gcc.cmake  icc.cmake  ispc.cmake
apps/Mesher/: CMakeLists.txt  main.cpp
apps/Voxelizer/: CMakeLists.txt  main.cpp
simdvoxelizer/: CMakeLists.txt  Mesher.cpp  Mesher.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h
simdvoxelizer/ispc/: SIMDSparseVoxelizer.ispc  tasksys.cpp
